name:                profuns
version:             0.1.0.0
synopsis:            Playing around with gloss
description:         Please see README.md
homepage:            https://github.com/chfi/profuns#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2017 Christian Fischer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable profuns
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , profunctors
                     , gloss
                     , gloss-raster
  other-modules:       Image
  ghc-options:         -threaded
                       -Odph
                       -fno-liberate-case
                       -funfolding-use-threshold1000
                       -funfolding-keeness-factor1000
                       -- -fllvm
                       -optlo-O3
                       -Wall
