name:                sdlgame
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/chfi/sdlgame#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2016 Christian Fischer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sdlgame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , sdl2
                     , netwire > 5
                     , containers
                     , vector
