name:                videogame
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/videogame#readme
license:             MIT
license-file:        LICENSE
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2016 Christian Fischer
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable videogame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , netwire
